# Chronicle

./: .env.example  .gitignore  .release-please-manifest.json  AGENTS.md  CLAUDE.md  Makefile  PROJECT_STATUS.md  README.md  TODO.md  docker-compose.yml  release-please-config.json
.claude/: settings.local.json
.github/workflows/: auto-merge-main.yml  ci.yml  package-main.yml  release.yml
apps/desktop/: .gitignore  CHANGELOG.md  README.md  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo
apps/desktop/src/main/ai/: README.md  __init__.py  client.ts  compare_images.py  export_openapi.py  gemini_engine.py  generated.ts  image_loader.py  main.py  model_engine.py  prompts.py  pyproject.toml  schemas.py  service-process.test.ts  service-process.ts  worker.live.test.ts  worker.test.ts  worker.ts
apps/desktop/src/main/ai/tests/: conftest.py  manual_gemini_smoke.py  test_compare_images.py  test_model_engine.py  test_pipeline.py  test_schemas.py
apps/landing/: README.md  astro.config.mjs  (+2 more)
demo-assets/: README.md
docs/: PROJECT_OVERVIEW.md  bob-log.md  contracts.md  getting-started.md  index.md  mcp-servers.md  mvp-12-acceptance.md  onboarding.md  releasing.md  spec.md
scripts/: admin_role.py  build_ai_sidecar.py  check_versions.py  demo_assets.py  mvp12_acceptance.py  smoke_ai_sidecar.py
services/ai/: README.md  pyproject.toml
services/ai/chronicle_ai/: __init__.py  __main__.py  config.py  engine.py  export_openapi.py  image_loader.py  main.py  prompts.py  psd_adapter.py  routes.py  schemas.py  version.py
services/ai/tests/: conftest.py  manual_gemini_smoke.py  manual_smoke.py  test_engine.py  test_pipeline.py  test_psd_adapter.py  test_routes.py  test_schemas.py
services/ai/tests/fixtures/: base64-1.txt  base64-2.txt  manual-api-test.txt
services/api/: pyproject.toml
services/api/alembic/versions/: 002_control_plane_accounts.py  003_telemetry.py  004_usage_statistics_v2.py  005_product_analytics_counts.py
services/api/app/: export_openapi.py  main.py  version.py
services/api/app/api/v1/: router.py
services/api/app/api/v1/endpoints/: account.py  admin_stats.py  auth.py  hello.py  installations.py  telemetry.py
services/api/app/core/: config.py  dependencies.py  security.py
services/api/app/models/: __init__.py  control_plane.py  user.py
services/api/app/schemas/: admin_stats.py  control_plane.py  telemetry.py
services/api/app/services/: admin_stats_service.py  auth_service.py  control_plane_service.py  google_auth_service.py  telemetry_service.py
services/api/tests/: test_admin_stats.py  test_auth.py  test_control_plane.py  test_roles.py  test_telemetry.py
(+130 files in other folders)
