[project]
name = "chronicle-ai"
version = "0.1.0"
description = "Chronicle's local, loopback-only AI service (annotation + text embeddings)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "langchain>=1.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
google = ["langchain-google-genai>=4.0"]
openai = ["langchain-openai>=1.0"]
anthropic = ["langchain-anthropic>=1.0"]
watsonx = ["langchain-ibm>=0.3"]
dev = [
    "httpx>=0.27",
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
bundle = ["pyinstaller>=6.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["chronicle_ai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
