[project]
name = "chronicle-ai-spike"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "langchain>=1.0",
    "pydantic>=2.7",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
google = ["langchain-google-genai>=4.0"]
openai = ["langchain-openai>=1.0"]
anthropic = ["langchain-anthropic>=1.0"]
watsonx = ["langchain-ibm>=0.3"]
dev = [
    "httpx>=0.27",
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
